# clap-derive-darling

./: .pre-commit-config.yaml  Cargo.toml
clap-derive-darling-macro/: Cargo.toml  README.md
clap-derive-darling-macro/src/: arg_enum.rs  args.rs  common.rs  field.rs  lib.rs  parser.rs  subcommand.rs
clap-derive-darling-macro/src/field/: test.rs
clap-derive-darling-macro/src/parser/: test.rs
clap-derive-darling-macro/src/subcommand/: test.rs
clap-derive-darling-macro/tests/goldenfiles/: test.rs
clap-derive-darling-macro/tests/goldenfiles/field/: test_to_tokens_augment.rs
clap-derive-darling-macro/tests/goldenfiles/parser/: test.rs
clap-derive-darling-macro/tests/goldenfiles/subcommand/: test.rs
examples/: clap.rs  fields.rs
src/: lib.rs  rename.rs
tests/: clap.rs  fields.rs
