[package]
name = "clap-derive-darling-macro"
version = "0.1.0"
authors = ["Greg \"GothAck\" Miell <rust@greg.gothack.ninja>"]
description = "Clap derive, implemented with darling"
repository = "https://github.com/GothAck/layeredconf"
documentation = "https://docs.rs/layeredconf"
categories = ["config", "encoding", "parsing"]
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
convert_case = "0.4.0"
darling = "0.13"
dyn-clone = "1.0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.5"
goldenfile = "1.1"

[lib]
path = "src/lib.rs"
proc-macro = true
